make sure scrollbar is always visible

--- a/services/QuillLMS/app/assets/stylesheets/shared/modals.scss
+++ b/services/QuillLMS/app/assets/stylesheets/shared/modals.scss
@@ -1368,11 +1368,25 @@
   cursor: pointer;
 }
 
+.teacher-info-modal::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+.teacher-info-modal::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
+
+
 .teacher-info-modal {
   overflow: scroll;
   max-width: 610px;
   width: 100%;
   background: #F8F6F6;
+  max-height: 90vh;
+  height: min-content;
   .account-form {
     padding: 0px;
   }
